--- a/src/index.less
+++ b/src/index.less
@@ -1,23 +1,21 @@
-@text-color: #E6E6E6;
+@bg-color: #F4F5F7;
+@primary-text-color: #000000;
+@secondary-text-color: #FFFFFF;
+@active-color: #1565C0;
+@color-secondary: #8491AE;
+@color-secondary-light: #B8C0D1; //fade 0.57 from @color-secondary
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: IBM Plex Sans, Sans, serif;
 
-  background-color: #282c34;
-  color: @text-color;
-  font-size: 24px;
+  background-color: @bg-color;
+  color: @primary-text-color;
 
   @media(max-width: 800px) {
-    font-size: 18px;
   }
 
   @media(max-width: 370px) {
-    font-size: 16px;
   }
 }
 
