--- a/src/index.less
+++ b/src/index.less
@@ -34,3 +34,13 @@ ul {
   color: #b6ddff;
   margin: 0;
 }
+
+
+.svg-button {
+    width: 36px;
+    height: 36px;
+
+  &:active {
+    color: @color-secondary;
+  }
+}
