--- a/src/index.less
+++ b/src/index.less
@@ -1,9 +1,4 @@
-@bg-color: #F4F5F7;
-@primary-text-color: #000000;
-@secondary-text-color: #FFFFFF;
-@active-color: #1565C0;
-@color-secondary: #8491AE;
-@color-secondary-light: #B8C0D1; //fade 0.57 from @color-secondary
+@import './variables.less';
 
 body {
   margin: 0;
@@ -11,6 +6,7 @@ body {
 
   background-color: @bg-color;
   color: @primary-text-color;
+  font-size: @font-size-primary;
 
   @media(max-width: 800px) {
   }
@@ -36,11 +32,41 @@ ul {
 }
 
 
+.App {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+
+//general styles
 .svg-button {
     width: 36px;
     height: 36px;
 
   &:active {
     color: @color-secondary;
+  }
+}
+
+.btn {
+  border: 1px solid @primary-text-color;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &.btn--rounded {
+    border-radius: 16px;
+  }
+
+  &.btn--small {
+    width: 64px;
+    height: 32px;
+  }
+
+  &.btn--active {
+    border: none;
+    background-color: @color-primary;
+    color: @secondary-text-color;
   }
 }
