--- a/src/components/components.less
+++ b/src/components/components.less
@@ -1,3 +1,10 @@
+@import '../variables.less';
+
 .top-panel {
   margin: 24px 16px;
+}
+
+.bottom-panel {
+  height: 48px;
+  background-color: @color-secondary-light;
 }
