--- a/src/index.less
+++ b/src/index.less
@@ -13,6 +13,8 @@ body {
 
   @media(max-width: 370px) {
   }
+
+  user-select: none;
 }
 
 img {
@@ -44,6 +46,11 @@ ul {
     width: 36px;
     height: 36px;
 
+  svg {
+    width: 36px;
+    height: 36px;
+  }
+
   &:active {
     color: @color-secondary;
   }
@@ -69,4 +76,9 @@ ul {
     background-color: @color-primary;
     color: @secondary-text-color;
   }
+}
+
+.link {
+  text-decoration: underline;
+  color: @color-primary;
 }
