--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -1,6 +1,10 @@
 @import '../variables.less';
 
 .page-setting {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
   .page-setting__name {
     margin: 24px 16px;
     text-align: center;
@@ -87,7 +91,7 @@
     display: flex;
 
     .switch-setting__description {
-      margin-right: 16px;
+      margin-left: 16px;
     }
 
     .switch-setting__caption {
@@ -99,5 +103,14 @@
       color: @color-secondary;
       font-size: @font-size-small-1;
     }
+  }
+
+  .page-setting__max-content {
+    flex-grow: 1;
+  }
+
+  .page-setting__bottom {
+    flex: 0 0 auto;
+    margin: 16px 24px;
   }
 }
