--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -1,10 +1,6 @@
 @import '../variables.less';
 
 .page-setting {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-
   .page-setting__name {
     margin: 24px 16px;
     text-align: center;
@@ -105,12 +101,11 @@
     }
   }
 
-  .page-setting__max-content {
-    flex-grow: 1;
-  }
-
   .page-setting__bottom {
-    flex: 0 0 auto;
     margin: 16px 24px;
   }
+}
+
+.page-table {
+
 }
