add rotated name

--- a/src/components/players/players.less
+++ b/src/components/players/players.less
@@ -41,6 +41,8 @@
 .player--left {
   .player__name {
     svg {
+      width: @font-size-primary;
+
       g {
         transform: translate(0, 18px) rotate(90deg) translate(-18px, 0);
       }
