rotated without svg

--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -107,5 +107,15 @@
 }
 
 .page-table {
+  .page-table__center {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
+  .table-info {
+    .table-info__round {
+      font-size: @font-size-header;
+    }
+  }
 }
