--- a/src/components/players/players.less
+++ b/src/components/players/players.less
@@ -39,16 +39,6 @@
 }
 
 .player--left {
-  .player__name {
-    svg {
-      width: @font-size-primary;
-
-      g {
-        transform: rotate(90deg);
-      }
-    }
-  }
-
   .player__wind {
     svg {
       width: @font-size-header;
@@ -61,16 +51,6 @@
 }
 
 .player--right {
-  .player__name {
-    svg {
-      width: @font-size-primary;
-
-      g {
-        transform: rotate(-90deg);
-      }
-    }
-  }
-
   .player__wind {
     svg {
       width: @font-size-header;
@@ -79,5 +59,39 @@
         transform: rotate(-90deg);
       }
     }
+  }
+}
+
+.player--rotated {
+  height: 100%;
+
+  .player__name-container {
+    height: 100%;
+    width: 24px; //font width
+    overflow: hidden;
+    position: relative;
+  }
+
+  .player__name {
+    width: calc(100vh - 100px - 100px - 48px); //top player, bottom player, bottom panel
+    height: 24px; //font width
+    position: absolute;
+    transform-origin: 0 0;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 5px;
+    text-overflow: ellipsis;
+  }
+
+  .player__name--left {
+    left: 24px;
+    transform: rotate(90deg);
+  }
+
+  .player__name--right {
+    bottom: -24px;
+    left: 0;
+    transform: rotate(270deg);
   }
 }
