--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -111,6 +111,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
   }
 
   .table-info {
