--- a/src/components/components.less
+++ b/src/components/components.less
@@ -7,4 +7,13 @@
 .bottom-panel {
   height: 48px;
   background-color: @color-secondary-light;
+
+  .bottom-panel__inner {
+    padding: 10px 34px;
+  }
+
+  .svg-button {
+    width: 28px;
+    height: 28px;
+  }
 }
