base component for player

--- a/src/components/players/players.less
+++ b/src/components/players/players.less
@@ -39,6 +39,7 @@
 }
 
 .player--left {
+  margin-left: 16px;
   display: flex;
   align-items: center;
 
@@ -48,6 +49,7 @@
 }
 
 .player--right {
+  margin-right: 16px;
   display: flex;
   align-items: center;
 
