--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -115,8 +115,31 @@
   }
 
   .table-info {
-    .table-info__round {
-      font-size: @font-size-header;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .table-info__round {
+    font-size: @font-size-header;
+  }
+
+  .table-info__table-number {
+    font-size: @font-size-header;
+    margin-top: 2px;
+  }
+
+  .table-info__tenbou {
+    margin-top: 4px;
+    display: flex;
+
+    .table-info__tenbou-count {
+      margin-left: 8px;
+    }
+
+    .svg-button {
+      width: 31px;
+      height: 24px;
     }
   }
 }
