add positive and negative scores

--- a/src/components/players/players.less
+++ b/src/components/players/players.less
@@ -171,3 +171,11 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.player__score--success {
+  color: @color-success;
+}
+
+.player__score--danger {
+  color: @color-danger;
+}
