--- a/src/variables.less
+++ b/src/variables.less
@@ -4,6 +4,8 @@
 @color-primary: #1565C0;
 @color-secondary: #8491AE;
 @color-secondary-light: #B8C0D1; //fade 0.57 from @color-secondary
+@color-success: #0DA678;
+@color-danger: #D32B2B;
 
 @font-size-primary: 18px;
 @font-size-secondary: 24px;
