--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -142,4 +142,23 @@
       height: 24px;
     }
   }
+
+  .table-info__timer {
+    margin-top: 8px;
+    font-size: 24px;
+  }
+
+  .table-info__games-left {
+    margin-top: 12px;
+    text-align: center;
+
+    .table-info__games-left-count {
+      font-size: 24px;
+      color: @color-danger;
+    }
+
+    .table-info__games-left-caption {
+      font-size: 14px;
+    }
+  }
 }
