player buttons styles

--- a/src/components/components.less
+++ b/src/components/components.less
@@ -6,7 +6,7 @@
 
 .bottom-panel {
   height: 48px;
-  background-color: @color-secondary-light;
+  background-color: @color-secondary-light-1;
 
   .bottom-panel__inner {
     padding: 10px 34px;
