--- a/src/components/switch/switch.less
+++ b/src/components/switch/switch.less
@@ -14,7 +14,7 @@
     right: 0;
     bottom: 0;
     border-radius: 16px;
-    background-color: @color-secondary-light;
+    background-color: @color-secondary-light-1;
 
     &.switch__box--on {
       background-color: @color-primary;
