--- a/src/variables.less
+++ b/src/variables.less
@@ -3,7 +3,9 @@
 @secondary-text-color: #FFFFFF;
 @color-primary: #1565C0;
 @color-secondary: #8491AE;
-@color-secondary-light: #B8C0D1; //fade 0.57 from @color-secondary
+@color-secondary-light-1: #B8C0D1; //fade 0.57 from @color-secondary
+@color-secondary-light-2: #d4d9e3; //fade 0.35 from @color-secondary
+@color-secondary-dark: #47526c; //HSL: L from 60 (@color-secondary) to 35
 @color-success: #0DA678;
 @color-danger: #D32B2B;
 
