--- a/src/components/components.less
+++ b/src/components/components.less
@@ -9,7 +9,15 @@
   background-color: @color-secondary-light-1;
 
   .bottom-panel__inner {
-    padding: 10px 34px;
+    padding: 6px 34px;
+    height: 36px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .bottom-panel__text {
+    font-size: @font-size-secondary;
   }
 
   .svg-button {
