--- a/src/index.less
+++ b/src/index.less
@@ -61,25 +61,83 @@ ul {
   }
 }
 
-.btn {
+.radio-btn {
   border: 1px solid @primary-text-color;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 16px;
 
-  &.btn--rounded {
-    border-radius: 16px;
-  }
-
-  &.btn--small {
+  &.radio-btn--small {
     width: 64px;
     height: 32px;
   }
 
-  &.btn--active {
+  &.radio-btn--active {
     border: none;
     background-color: @color-primary;
     color: @secondary-text-color;
+  }
+}
+
+.flat-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid @color-secondary-light-1;
+  border-radius: 8px;
+  box-sizing: border-box;
+
+  &.flat-btn--small {
+    width: 52px;
+    height: 52px;
+  }
+
+  &.flat-btn--medium {
+    width: 72px;
+    height: 52px;
+  }
+
+  &.flat-btn--large {
+    width: 112px;
+    height: 52px;
+
+  }
+
+  &.flat-btn--v-large {
+    width: 52px;
+    height: 112px;
+  }
+
+
+  &.flat-btn--success {
+    border-color: @color-success;
+    color: @color-success;
+  }
+
+  &.flat-btn--danger {
+    border-color: @color-danger;
+    color: @color-danger;
+  }
+
+  &.flat-btn--pressed {
+    border-color: @color-secondary-dark;
+    color: @color-secondary-dark;
+  }
+
+  &.flat-btn--disabled {
+    border-color: @color-secondary-light-2;
+    color: @color-secondary-light-2;
+  }
+
+  svg {
+    width: 36px;
+    height: 36px;
+  }
+
+  .flat-btn__caption {
+    text-align: center;
+    font-size: @font-size-small-2;
   }
 }
 
