--- a/src/components/components.less
+++ b/src/components/components.less
@@ -2,6 +2,7 @@
 
 .top-panel {
   margin: 24px 16px;
+  flex: 0 0 auto;
 }
 
 .bottom-panel {
@@ -23,5 +24,36 @@
   .svg-button {
     width: 28px;
     height: 28px;
+  }
+}
+
+.player-dropdown {
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+
+  .player-dropdown__player {
+    width: 276px;
+    margin-bottom: 32px;
+    margin-left: 12px;
+
+    &:after {
+      display: block;
+      content: '';
+      border-bottom: 2px solid @color-secondary-light-1;
+      width: auto;
+    }
+
+    .player-dropdown__player-name {
+      padding: 0 4px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .player-dropdown__placeholder {
+      padding: 0 4px;
+      color: @color-secondary-light-1;
+    }
   }
 }
