--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -206,5 +206,34 @@
       color: @color-danger;
     }
   }
+}
 
+.page-new-game {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  .page-new-game__inner {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    height: 100%;
+  }
+
+  .page-new-game__players {
+    display: flex;
+    flex-direction: column;
+    height: 90%;
+    justify-content: center;
+  }
+
+  .page-new-game__buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 36px;
+
+    .flat-btn--medium:last-child {
+      margin-left: 24px;
+    }
+  }
 }
