search players component

--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -237,3 +237,22 @@
     }
   }
 }
+
+.page-search-player {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  .page-search-player__content {
+    flex-grow: 1;
+    overflow-y: scroll;
+  }
+
+  .page-search-player__name {
+    margin: 20px 16px;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
