--- a/src/components/components.less
+++ b/src/components/components.less
@@ -13,9 +13,9 @@
     height: 24px;
 
     input {
-      width: calc(100% - 8px);
+      width: calc(100% - 24px - 4px);
       font-size: @font-size-small-2;
-      padding: 2px 4px;
+      padding: 2px 24px 2px 4px;
       background-color: transparent;
       border: none;
       border-radius: 0;
