--- a/src/components/result-arrows/result-arrows.less
+++ b/src/components/result-arrows/result-arrows.less
@@ -13,6 +13,9 @@
   }
 
   svg {
+    overflow: visible;
+    box-shadow: 0 0 10000px transparent;
+
     text {
       font-size: @font-size-small-1;
     }
