--- a/src/index.less
+++ b/src/index.less
@@ -33,6 +33,12 @@ ul {
   margin: 0;
 }
 
+p {
+  margin-block-start: unset;
+  margin-block-end: unset;
+  margin-inline-start: unset;
+  margin-inline-end: unset;
+}
 
 .App {
   overflow-x: hidden;
