--- a/src/components/components.less
+++ b/src/components/components.less
@@ -6,6 +6,10 @@
   display: flex;
   align-items: center;
 
+  &.top-panel--between {
+    justify-content: space-between;
+  }
+
   .top-panel__search {
     position: relative;
     flex: 1 1 auto;
