--- a/src/screens/screen.less
+++ b/src/screens/screen.less
@@ -345,3 +345,13 @@
     margin: 16px 24px;
   }
 }
+
+.page-home {
+
+  .page-home__title {
+    font-size: 32px;
+    text-align: center;
+    margin-top: 24px;
+    word-break: break-word;
+  }
+}
