--- a/src/variables.less
+++ b/src/variables.less
@@ -9,9 +9,11 @@
 @primary-text-color: var(--primary-text-color);
 @secondary-text-color: var(--secondary-text-color);
 @color-primary: var(--color-primary);
+@color-primary-active: var(--color-primary-active);
 @color-secondary: var(--color-secondary);
 @color-secondary-light-1: var(--color-secondary-light-1);
 @color-secondary-light-2: var(--color-secondary-light-2);
+@color-secondary-light-3: var(--color-secondary-light-3);
 @color-secondary-dark: var(--color-secondary-dark);
 @color-success: var(--color-success);
 @color-danger: var(--color-danger);
@@ -22,9 +24,11 @@ body {
   --primary-text-color: #000000;
   --secondary-text-color: #FFFFFF;
   --color-primary: #1565C0;
+  --color-primary-active: #1979E5; //HSB: B from 75 to 90
   --color-secondary: #8491AE;
   --color-secondary-light-1: #B8C0D1; //fade 0.57 from color-secondary
   --color-secondary-light-2: #d4d9e3; //fade 0.35 from color-secondary
+  --color-secondary-light-3: #e0e4eb; //HSL: L from 60 to 90
   --color-secondary-dark: #47526c; //HSL: L from 60 (color-secondary) to 35
   --color-success: #0DA678;
   --color-danger: #D32B2B;
