--- a/src/components/select-modal/select-modal.less
+++ b/src/components/select-modal/select-modal.less
@@ -8,7 +8,7 @@
   .modal__bg {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 48px);
     background-color: @color-secondary-dark;
     opacity: 0.5;
   }
