select yaku screen

--- a/src/variables.less
+++ b/src/variables.less
@@ -10,6 +10,7 @@
 @secondary-text-color: var(--secondary-text-color);
 @color-primary: var(--color-primary);
 @color-primary-active: var(--color-primary-active);
+@color-primary-light: var(--color-primary-light);
 @color-secondary: var(--color-secondary);
 @color-secondary-light-1: var(--color-secondary-light-1);
 @color-secondary-light-2: var(--color-secondary-light-2);
@@ -25,6 +26,7 @@ body {
   --secondary-text-color: #FFFFFF;
   --color-primary: #1565C0;
   --color-primary-active: #1979E5; //HSB: B from 75 to 90
+  --color-primary-light: #bdd4ed; //fade 0.28 from color-primary
   --color-secondary: #8491AE;
   --color-secondary-light-1: #B8C0D1; //fade 0.57 from color-secondary
   --color-secondary-light-2: #d4d9e3; //fade 0.35 from color-secondary
