--- a/src/index.less
+++ b/src/index.less
@@ -70,6 +70,10 @@ p {
     width: 28px;
     height: 28px;
   }
+  &.svg-button--xsmall {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .radio-btn {
