--- a/src/screens/select-hand/page-set-hand.less
+++ b/src/screens/select-hand/page-set-hand.less
@@ -17,23 +17,23 @@
 }
 
 .select-yaku-panel {
-  margin: 4px 6px;
+  margin: 8px 0;
   flex-grow: 1;
   height: 100%;
   font-size: @font-size-secondary;
   overflow: scroll;
 
   .select-yaku-panel__group {
+    margin: 0 6px;
     display: flex;
     flex-wrap: wrap;
   }
 
   .select-yaku-panel__button {
     flex: 1 0 auto;
-    align-self: stretch;
     text-align: center;
     padding: 8px 12px;
-    margin: 2px;
+    margin: 0 2px 4px 2px;
     border: 2px solid @color-secondary-light-1;
     border-radius: 4px;
 
@@ -44,6 +44,48 @@
     &.select-yaku-panel__button--disabled {
       background-color: @color-secondary-light-3;
       color: @color-secondary-light-1;
+    }
+  }
+}
+
+.select-total-panel {
+  flex-grow: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-size: @font-size-secondary;
+
+  .select-total-panel__top-group {
+    flex: 0 0 auto;
+    display: flex;
+    justify-content: center;
+    margin: 24px 0 4px 0;
+
+    span {
+      margin-left: 10px;
+    }
+  }
+
+  .select-total-panel__max {
+    flex-grow: 1;
+    height: 100%;
+  }
+
+  .select-total-panel__bottom-group {
+    flex: 0 0 auto;
+    display: flex;
+    justify-content: center;
+    margin: 4px 0 20px 0;
+  }
+
+  .select-total-panel__select-group {
+    margin: 18px 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .select-total-panel__select-group-caption {
+
     }
   }
 }
