enter pin screen

--- a/src/index.less
+++ b/src/index.less
@@ -103,6 +103,10 @@ p {
   border-radius: 8px;
   box-sizing: border-box;
 
+  &:active {
+    background-color: @color-secondary-light-3;
+  }
+
   &.flat-btn--small {
     width: 52px;
     height: 52px;
