enter pin screen

--- a/src/screens/login/page-enter-pin.less
+++ b/src/screens/login/page-enter-pin.less
@@ -33,7 +33,12 @@
     }
 
     .page-enter-pin__number {
+      font-size: @font-size-secondary;
+    }
 
+    .page-enter-pin__placeholder {
+      font-size: @font-size-small-2;
+      color: @color-secondary-light-1;
     }
 
     .page-enter-pin__qr {
@@ -51,7 +56,7 @@
     margin: 24px;
 
     .page-enter-pin__button {
-
+      font-size: @font-size-header;
     }
   }
 
