--- a/src/index.less
+++ b/src/index.less
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: IBM Plex Sans, Sans, serif;
+  font-family: IBM Plex Sans, Noto Sans Wind, Sans, serif;
 
   background-color: @bg-color;
   color: @primary-text-color;
