add viewport addon

--- a/src/storybook-base/storybook-base.less
+++ b/src/storybook-base/storybook-base.less
@@ -1,6 +1,6 @@
 .story {
-  width: 375px;
-  height: 667px;
+  //width: 375px;
+  //height: 667px;
   border: 12px solid #53575d;
   border-radius: 16px;
   position: relative;
