--- a/src/index.less
+++ b/src/index.less
@@ -1,11 +1,10 @@
 @import './variables.less';
+@import './themes.less';
 
 body {
   margin: 0;
   font-family: IBM Plex Sans, Noto Sans Wind, Sans, serif;
 
-  background-color: @bg-color;
-  color: @primary-text-color;
   font-size: @font-size-primary;
 
   @media(max-width: 800px) {
@@ -45,6 +44,9 @@ p {
   position: absolute;
   width: 100%;
   height: 100%;
+
+  background-color: @bg-color;
+  color: @primary-text-color;
 }
 
 
