--- a/src/components/components.less
+++ b/src/components/components.less
@@ -23,11 +23,11 @@
       background-color: transparent;
       border: none;
       border-radius: 0;
-      border-bottom: 2px solid @color-secondary-light-1;
+      border-bottom: 2px solid @color-secondary-3;
       outline: none;
 
       &::placeholder {
-        color: @color-secondary-light-1;
+        color: @color-secondary-3;
       }
     }
 
@@ -44,7 +44,7 @@
 
 .bottom-panel {
   height: 48px;
-  background-color: @color-secondary-light-1;
+  background-color: @color-secondary-3;
 
   .bottom-panel__inner {
     padding: 6px 34px;
@@ -77,7 +77,7 @@
     &:after {
       display: block;
       content: '';
-      border-bottom: 2px solid @color-secondary-light-1;
+      border-bottom: 2px solid @color-secondary-3;
       width: auto;
     }
 
@@ -90,7 +90,7 @@
 
     .player-dropdown__placeholder {
       padding: 0 4px;
-      color: @color-secondary-light-1;
+      color: @color-secondary-3;
     }
   }
 }
