--- a/src/index.less
+++ b/src/index.less
@@ -61,11 +61,11 @@ p {
   }
 
   &.svg-button--disabled {
-    color: @color-secondary;
+    color: @color-secondary-2;
   }
 
   &:not(.svg-button--disabled):active {
-    color: @color-secondary; //todo think about active color
+    color: @color-secondary-1;
   }
 
   &.svg-button--small {
@@ -101,12 +101,12 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 2px solid @color-secondary-light-1;
+  border: 2px solid @color-secondary-3;
   border-radius: 8px;
   box-sizing: border-box;
 
   &:active {
-    background-color: @color-secondary-light-3;
+    background-color: @color-secondary-5;
   }
 
   &.flat-btn--small {
@@ -142,13 +142,13 @@ p {
   }
 
   &.flat-btn--pressed {
-    border-color: @color-secondary-dark;
-    color: @color-secondary-dark;
+    border-color: @color-secondary-1;
+    color: @color-secondary-1;
   }
 
   &.flat-btn--disabled {
-    border-color: @color-secondary-light-2;
-    color: @color-secondary-light-2;
+    border-color: @color-secondary-4;
+    color: @color-secondary-4;
   }
 
   svg {
