--- a/src/screens/home/page-home.less
+++ b/src/screens/home/page-home.less
@@ -32,7 +32,7 @@
 
       &:hover, &:active {
         padding: 0;
-        background-color: @color-secondary-light-3;
+        background-color: @color-secondary-5;
 
         &:before, &:after  {
           width: 100%
@@ -42,7 +42,7 @@
       &:before {
         width: calc(100% - 24px);
         height: 2px;
-        background-color: @color-secondary-light-1;
+        background-color: @color-secondary-3;
         content: '';
         display: block;
         position: absolute;
@@ -51,7 +51,7 @@
       &:not(&:last-child):after {
         width: calc(100% - 24px);
         height: 2px;
-        background-color: @color-secondary-light-1;
+        background-color: @color-secondary-3;
         content: '';
         display: block;
         position: absolute;
