--- a/src/screens/login/page-enter-pin.less
+++ b/src/screens/login/page-enter-pin.less
@@ -22,7 +22,7 @@
       display: block;
       width: 100%;
       height: 2px;
-      background-color: @color-secondary-light-1;
+      background-color: @color-secondary-3;
     }
 
     .page-enter-pin__input-group {
@@ -38,7 +38,7 @@
 
     .page-enter-pin__placeholder {
       font-size: @font-size-small-2;
-      color: @color-secondary-light-1;
+      color: @color-secondary-3;
     }
 
     .page-enter-pin__qr {
