--- a/src/screens/settings/page-setting.less
+++ b/src/screens/settings/page-setting.less
@@ -91,7 +91,7 @@
 
     .switch-setting__info {
       margin-top: 12px;
-      color: @color-secondary;
+      color: @color-secondary-2;
       font-size: @font-size-small-1;
     }
   }
