--- a/src/variables.less
+++ b/src/variables.less
@@ -11,10 +11,11 @@
 @color-primary: var(--color-primary);
 @color-primary-active: var(--color-primary-active);
 @color-primary-light: var(--color-primary-light);
-@color-secondary: var(--color-secondary);
-@color-secondary-light-1: var(--color-secondary-light-1);
-@color-secondary-light-2: var(--color-secondary-light-2);
-@color-secondary-light-3: var(--color-secondary-light-3);
-@color-secondary-dark: var(--color-secondary-dark);
+@color-primary-light-active: var(--color-primary-light-active);
+@color-secondary-1: var(--color-secondary-1);
+@color-secondary-2: var(--color-secondary-2);
+@color-secondary-3: var(--color-secondary-3);
+@color-secondary-4: var(--color-secondary-4);
+@color-secondary-5: var(--color-secondary-5);
 @color-success: var(--color-success);
 @color-danger: var(--color-danger);
