--- a/src/components/select-modal/select-modal.less
+++ b/src/components/select-modal/select-modal.less
@@ -11,7 +11,7 @@
     position: absolute;
     width: 100%;
     height: calc(100% - 48px);
-    background-color: @color-secondary-dark;
+    background-color: @color-secondary-1;
     opacity: 0.5;
   }
 
@@ -34,7 +34,7 @@
     width: 35px;
     height: 4px;
     margin: 8px 0;
-    background-color: @color-secondary-light-1;
+    background-color: @color-secondary-3;
     border-radius: 2px;
   }
 
@@ -49,7 +49,7 @@
     padding: 12px 0;
 
     &:hover, &:active {
-      background-color: @color-secondary-light-3;
+      background-color: @color-secondary-5;
     }
   }
 }
