--- a/src/components/tab/tab.less
+++ b/src/components/tab/tab.less
@@ -8,7 +8,7 @@
     display: block;
     width: 100%;
     height: 3px;
-    background-color: @color-secondary-light-1;
+    background-color: @color-secondary-3;
   }
 
   .tab-panel__items {
