--- a/src/screens/select-hand/page-set-hand.less
+++ b/src/screens/select-hand/page-set-hand.less
@@ -34,16 +34,20 @@
     text-align: center;
     padding: 8px 12px;
     margin: 0 2px 4px 2px;
-    border: 2px solid @color-secondary-light-1;
+    border: 2px solid @color-secondary-3;
     border-radius: 4px;
 
-    &.select-yaku-panel__button--clicked {
+    &.select-yaku-panel__button--pressed {
       background-color: @color-primary-light;
     }
 
     &.select-yaku-panel__button--disabled {
-      background-color: @color-secondary-light-3;
-      color: @color-secondary-light-1;
+      background-color: @color-secondary-5;
+      color: @color-secondary-3;
+    }
+
+    &:not(.select-yaku-panel__button--disabled):active {
+      background-color: @color-primary-light-active;
     }
   }
 }
