--- a/src/themes.less
+++ b/src/themes.less
@@ -1,29 +1,40 @@
 .theme-day {
   --bg-color: #F4F5F7;
+
   --primary-text-color: #000000;
   --secondary-text-color: #FFFFFF;
+
   --color-primary: #1565C0;
   --color-primary-active: #1979E5; //HSB: B from 75 to 90
   --color-primary-light: #bdd4ed; //fade 0.28 from color-primary
-  --color-secondary: #8491AE;
-  --color-secondary-light-1: #B8C0D1; //fade 0.57 from color-secondary
-  --color-secondary-light-2: #d4d9e3; //fade 0.35 from color-secondary
-  --color-secondary-light-3: #e0e4eb; //HSL: L from 60 to 90
-  --color-secondary-dark: #47526c; //HSL: L from 60 (color-secondary) to 35
+  --color-primary-light-active: #e3edf7; //fade 0.12 from color-primary
+
+  --color-secondary-1: #47526c; //HSL: L from 60 (color-secondary) to 35
+  --color-secondary-2: #8491AE;
+  --color-secondary-3: #B8C0D1; //fade 0.57 from color-secondary
+  --color-secondary-4: #d4d9e3; //fade 0.35 from color-secondary
+  --color-secondary-5: #e0e4eb; //HSL: L from 60 to 90
+
   --color-success: #0DA678;
   --color-danger: #D32B2B;
 }
 
 .theme-night {
-    --bg-color: #282C34;
-    --primary-text-color: #E6E6E6;
-    --secondary-text-color: #E6E6E6;
-    --color-primary: #1565C0;
+  --bg-color: #282C34;
 
-    --color-secondary: #8491AE; // ??
-    --color-secondary-light-1: #37445C;
-    --color-secondary-light-2: #d4d9e3; //??
-    --color-secondary-dark: #47526c; //??
-    --color-success: #43D8AB;
-    --color-danger: #ff6969;
+  --primary-text-color: #E6E6E6;
+  --secondary-text-color: #FFFFFF;
+
+  --color-primary: #1565C0;
+  --color-primary-active: #1979E5; //HSB: B from 75 to 90
+  --color-primary-light: #bdd4ed; //fade 0.28 from color-primary
+  --color-primary-light-active: #e3edf7; //fade 0.12 from color-primary
+
+  --color-secondary-1: #47526c; //??
+  --color-secondary-2: #8491AE; // ??
+  --color-secondary-3: #37445C;
+  --color-secondary-4: #d4d9e3; //??
+  --color-secondary-5: #e0e4eb; //??
+  --color-success: #43D8AB;
+  --color-danger: #ff6969;
 }
