--- a/src/variables.less
+++ b/src/variables.less
@@ -17,5 +17,6 @@
 @color-secondary-3: var(--color-secondary-3);
 @color-secondary-4: var(--color-secondary-4);
 @color-secondary-5: var(--color-secondary-5);
+@color-secondary-6: var(--color-secondary-6);
 @color-success: var(--color-success);
 @color-danger: var(--color-danger);
