--- a/src/components/select-modal/select-modal.less
+++ b/src/components/select-modal/select-modal.less
@@ -48,7 +48,7 @@
     text-align: center;
     padding: 12px 0;
 
-    &:hover, &:active {
+    &:active {
       background-color: @color-secondary-6;
     }
   }
