--- a/src/screens/home/page-home.less
+++ b/src/screens/home/page-home.less
@@ -22,7 +22,7 @@
       background-color: @color-primary;
       color: @secondary-text-color;
 
-      &:hover, &:active {
+      &:active {
         background-color: @color-primary-active;
       }
     }
@@ -30,7 +30,7 @@
     &.page-home__button--bordered {
       padding: 0 12px;
 
-      &:hover, &:active {
+      &:active {
         padding: 0;
         background-color: @color-secondary-6;
 
