--- a/src/index.less
+++ b/src/index.less
@@ -105,7 +105,7 @@ p {
   border-radius: 8px;
   box-sizing: border-box;
 
-  &:active {
+  &:not(.flat-btn--disabled):active {
     background-color: @color-secondary-6;
   }
 
