--- a/src/components/players/players.less
+++ b/src/components/players/players.less
@@ -267,7 +267,9 @@
   width: 53px;
   height: 8.5px;
   margin-left: 8px;
-  margin-top: 7px;
+  margin-top: 8px;
   position: absolute;
 
+  color: @primary-text-color;
+  --riichi-circle-color: @color-danger;
 }
